2000-06-23  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/List.pm (bounce_gen_stats): Use the configuration
	variables instead of hardcoding things.

	* lib/Bf/Parser.pm (parse_exim): Don't require an exact match on
	the identification string, since some versions include extra text.
	(parse_smtp32): New function to parse bounces from SMTP32.
	(check_dsn_diags): Tighten up the search for the line that starts
	the session transcript; AOL includes something that looks like it
	in the chatty portion of the bounce as an explanation.

	* lib/Mj/List.pm (expire_subscriber_data): Forgot to actually
	expire any bounce data.

2000-06-22  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Bf/Parser.pm (parse_postoffice): Parse bounces from
	Post.Office.
	(parse_qmail): Handle yet another qmail variant.
	(check_dsn_diags): Recognize yet another sendmail diagnostic
	format.

2000-06-21  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Bf/Parser.pm (parse_lotus): Parse bounces from Lotus SMTP
	MTA.

2000-06-20  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/mj_cf_data.pl: Add bounce_max_age (31) and bounce_max_count
	(100) variables.

	* lib/Majordomo.pm (_list_file_get_string): If the file doesn't
	exist, just say so insteaf of trying to open and read nothing.

	* lib/Mj/MailOut.pm (deliver): Pass bounce_probe_pattern to
	delivery routine.

	* lib/mj_cf_data.pl: Add bounce_probe_pattern variable.

	* lib/Mj/Deliver.pm (deliver): If there is stored bounce data for
	this address, always probe it.  The bounce data will eventually
	expire and the probes will stop if the address stops bouncing.

	* lib/Majordomo.pm (who_chunk): Fix some bustedness in
	who-enhanced GLOBAL that I introduced with who-export.

2000-06-20  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Format.pm (show): Display bounce data as well.

2000-06-20  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MailOut.pm (handle_bounce): Send the bounce body to the
	session file.